header desktop done

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,7 +1,8 @@
 .container {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
-  margin-inline: auto;
+  margin-inline: var(--container-padding-x);
   padding-inline: var(--container-padding-x);
+  border-radius: var(--container-border-radius);
 }
 
 .visually-hidden {
@@ -17,8 +18,26 @@
   overflow: hidden !important;
 }
 
+.hidden-tablet {
+  @include tablet {
+    display: none !important;
+  }
+}
+
+.visible-tablet {
+  @include tablet-above {
+    display: none !important;
+  }
+}
+
 .hidden-mobile {
   @include mobile {
+    display: none !important;
+  }
+}
+
+.visible-mobile {
+  @include mobile-above {
     display: none !important;
   }
 }
