--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,10 +15,12 @@
   --border-radius-huge: 39px;
 
   --font-family-base: 'Commissioner', sans-serif;
-  --font-family-accent: 'Commissioner', sans-serif;
+  --font-family-accent: 'DrunkWideCyr', sans-serif;
 
-  --container-width: 1240px;
-  --container-padding-x: 12px;
+  --container-width: 1880px;
+  --container-padding-x: 20px;
+  --container-margin-x: 20px;
+  --container-border-radius: var(--border-radius);
 
   --section-padding-y: 60px;
 
