--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -1,9 +1,20 @@
+$desktop-above: 1281px;
 $desktop: 1280px;
+
+$tablet-above: 1024px;
 $tablet: 1023px;
+
+$mobile-above: 768px;
 $mobile: 767px;
 
 @mixin desktop {
   @media (max-width: $desktop) {
+    @content;
+  }
+}
+
+@mixin desktop-above {
+  @media (min-width: $desktop) {
     @content;
   }
 }
@@ -14,8 +25,20 @@ $mobile: 767px;
   }
 }
 
+@mixin tablet-above {
+  @media (min-width: $tablet) {
+    @content;
+  }
+}
+
 @mixin mobile {
   @media (max-width: $mobile) {
+    @content;
+  }
+}
+
+@mixin mobile-above {
+  @media (min-width: $mobile) {
     @content;
   }
 }
