--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@
   --color-primary-orange: #F36722;
   --color-primary-green: #2E8D43;
 
+  --border-radius-mobile: 10px;
   --border-radius-tiny: 14px;
   --border-radius-small: 16px;
   --border-radius: 20px;
