--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -23,11 +23,14 @@ a {
 }
 
 h1, h2, h3, h4 {
+  font-family: var(--font-family-accent);
+  text-transform: uppercase;
   font-weight: 700;
 }
 
 h1 {
   @include fluid-text(80, 26);
+  line-height: 120%;
 }
 
 h2 {
