--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -14,7 +14,7 @@ $mobile: 767px;
 }
 
 @mixin desktop-above {
-  @media (min-width: $desktop) {
+  @media (min-width: $desktop-above) {
     @content;
   }
 }
@@ -26,7 +26,7 @@ $mobile: 767px;
 }
 
 @mixin tablet-above {
-  @media (min-width: $tablet) {
+  @media (min-width: $tablet-above) {
     @content;
   }
 }
@@ -38,7 +38,7 @@ $mobile: 767px;
 }
 
 @mixin mobile-above {
-  @media (min-width: $mobile) {
+  @media (min-width: $mobile-above) {
     @content;
   }
 }
