--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,7 +1,7 @@
 @use 'sass:math';
 
 @mixin fluid-text($max: 48, $min: 16) {
-  font-size: clamp(#{min}px, #{math.div($max, 1920) * 100}vw, #{$max}px);
+  font-size: clamp(#{$min}px, #{math.div($max, 1920) * 100}vw, #{$max}px);
 }
 
 @mixin reset-link {
