--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,4 +10,11 @@
 @import
   'blocks/button',
   'blocks/header',
-  'blocks/section';
+  'blocks/section',
+  'blocks/hero',
+  'blocks/possibilities',
+  'blocks/possibility-card',
+  'blocks/education',
+  'blocks/workout',
+  'blocks/materials',
+  'blocks/material-card';
