--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -22,7 +22,7 @@ a {
   color: inherit;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   font-family: var(--font-family-accent);
   text-transform: uppercase;
   font-weight: 700;
@@ -35,12 +35,19 @@ h1 {
 
 h2 {
   @include fluid-text(48, 20);
+  line-height: 120%;
 }
 
 h3 {
   @include fluid-text(32, 20);
+  line-height: 130%;
 }
 
 h4 {
   @include fluid-text(20, 14);
+}
+
+h5 {
+  @include fluid-text(16, 14);
+  margin: 0;
 }
