--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,12 +1,10 @@
 .header {
   padding-top: 20px;
+  margin-bottom: 8px;
 
   @include desktop {
     padding-top: 16px;
 
-    .container {
-      margin-inline: 16px;
-    }
   }
 
   @include tablet {
@@ -26,6 +24,7 @@
     background-color: var(--color-light);
     justify-content: space-between;
     align-items: center;
+    padding-inline: 20px;
     column-gap: 6px;
     height: 80px;
 
@@ -95,7 +94,6 @@
       margin-left: auto;
     }
   }
-
 
   &__menu {
     margin-right: auto;
