--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -15,8 +15,8 @@
 }
 
 @font-face {
-  font-family: 'Commissioner';
-  src: url('../fonts/Commissioner/Commissioner-Bold.woff2') format('woff2');
+  font-family: 'CommissionerRegular';
+  src: url('../fonts/Commissioner/Commissioner-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
