--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,21 +1,20 @@
 .container {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
-  margin-inline: var(--container-padding-x);
-  //padding-inline: var(--container-padding-x);
+  margin-inline: var(--container-margin-x);
   border-radius: var(--border-radius);
+
 }
 
-.visually-hidden {
-  position: absolute !important;
-  width: 1px !important;
-  height: 1px !important;
-  margin: -1px !important;
-  border: 0 !important;
-  padding: 0 !important;
-  white-space: nowrap !important;
-  clip-path: inset(100%) !important;
-  clip: rect(0 0 0 0) !important;
-  overflow: hidden !important;
+.hidden-desktop {
+  @include desktop {
+    display: none !important;
+  }
+}
+
+.visible-desktop {
+  @include desktop-above {
+    display: none !important;
+  }
 }
 
 .hidden-tablet {
