--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,7 +22,7 @@
   --container-padding-x: 20px;
   --container-margin-x: 20px;
 
-  --section-padding-y: 120px;
+  --section-margin-bottom: 120px;
 
   --button-height: 33px;
   --button-height-big: 38px;
