--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,4 +17,6 @@
   'blocks/education',
   'blocks/workout',
   'blocks/materials',
-  'blocks/material-card';
+  'blocks/material-card',
+  'blocks/footer',
+  'blocks/qr-code';
