--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,11 +1,24 @@
 body {
   @include fluid-text(16, 14);
-
   font-family: var(--font-family-base);
   font-weight: 400;
   line-height: 160%;
   color: var(--color-dark);
   background-color: var(--color-light-gray);
+
+  @media (min-width: 1921px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .header__inner {
+      width: 100vw;
+    }
+  }
+}
+
+button {
+  text-wrap: none;
 }
 
 a,
@@ -48,6 +61,40 @@ h4 {
 }
 
 h5 {
-  @include fluid-text(16, 14);
+  @include fluid-text(16, 10);
   margin: 0;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.orange-link {
+  color: var(--color-primary-orange);
+
+  &::after {
+    content: '';
+    background-image: url("/src/images/right_arrow_orange.svg");
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.green-link {
+  color: var(--color-primary-green);
+
+  &::after {
+    content: '';
+    background-image: url("/src/images/right_arrow_green.svg");
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.thin-font {
+  color: var(--color-dark-gray);
+  font-family: 'CommissionerRegular', serif;
 }
