--- a/src/styles/blocks/_possibility-card.scss
+++ b/src/styles/blocks/_possibility-card.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 784px;
   background-color: var(--color-light);
   border-radius: var(--border-radius);
   overflow: hidden;
@@ -14,7 +13,6 @@
 
   &__image {
     width: 100%;
-    height: 520px;
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
     overflow: hidden;
@@ -39,6 +37,10 @@
     flex-direction: column;
     row-gap: 16px;
     padding: 24px;
+
+    @include mobile {
+      padding: 12px;
+    }
   }
 
   &__text {
