--- a/src/styles/blocks/_workout.scss
+++ b/src/styles/blocks/_workout.scss
@@ -4,6 +4,11 @@
   row-gap: 20px;
   position: relative;
 
+  @include mobile {
+    row-gap: 8px;
+    grid-template-rows: 400px;
+  }
+
   &__button {
     background-color: rgba(255, 255, 255, 0.2);
     color: var(--color-light);
@@ -22,10 +27,23 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @include mobile {
+      height: 400px;
+      padding: 12px;
+    }
   }
 
   &__places {
     background-image: url("/src/images/1.jpg");
+    background-size: cover;
+    background-position: left center;
+    background-repeat: no-repeat;
+
+    @include desktop {
+      background-position: center;
+      background-size: cover;
+    }
   }
 
   &__trainers {
@@ -41,5 +59,9 @@
     flex-wrap: wrap;
     gap: 4px;
     width: 55%;
+
+    @include desktop {
+      width: 100%;
+    }
   }
 }
