--- a/src/styles/blocks/_section.scss
+++ b/src/styles/blocks/_section.scss
@@ -21,6 +21,10 @@
       text-transform: uppercase;
       display: flex;
       column-gap: 12px;
+
+      @include mobile {
+        font-size: 12px;
+      }
     }
   }
 
